; ModuleID = '/home/carl/AnghaBench/zstd/tests/extr_zstreamtest.c_FUZ_randomClampedLength.c'
source_filename = "/home/carl/AnghaBench/zstd/tests/extr_zstreamtest.c_FUZ_randomClampedLength.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64*, i64, i64)* @FUZ_randomClampedLength to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @FUZ_randomClampedLength(i64* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp slt i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %3
  br label %17

12:                                               ; preds = %3
  %13 = load i64, i64* %6, align 8
  %14 = add nsw i64 %13, 1
  %15 = load i64, i64* %5, align 8
  %16 = sub nsw i64 %14, %15
  br label %17

17:                                               ; preds = %12, %11
  %18 = phi i64 [ 1, %11 ], [ %16, %12 ]
  store i64 %18, i64* %7, align 8
  %19 = load i64*, i64** %4, align 8
  %20 = call i64 @FUZ_rand(i64* %19)
  %21 = load i64, i64* %7, align 8
  %22 = srem i64 %20, %21
  %23 = load i64, i64* %5, align 8
  %24 = add nsw i64 %22, %23
  ret i64 %24
}

declare dso_local i64 @FUZ_rand(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
